# SAT_solver

./: .gitignore  PLAN_best_trail_c0_1_10_15.md  README.md  RESULTS.md  pyproject.toml
examples/: aes_spn.json  best_trail_c0_1_10_15.py  best_trail_c0_1_10_15_R4.py  best_trail_c0_1_17_14.py  best_trail_c0_1_17_14_R4.py  c0.txt  c0_rank_R3_results.txt  c0_rank_R4_results.txt  c0_rank_cache.json  c0_sweep_results.txt  identity_8.json  lin344.py  lin344_spn.py  lin344_variants.py  rank_best.py  rank_r4.py  rotxor_8.json  run_all_checks.py  sweep_c0.py
src/sat_branch/: __init__.py  branch.py  cli.py  encoder.py  io.py  layer.py  propagation.py  solver.py  spn.py
tests/: lin344_ref.py  test_branch.py  test_encoder.py  test_layer.py  test_lin344.py  test_min_weight.py  test_propagation.py  test_spn.py
